# task2_FastAPI

./: main.py  pyproject.toml
