[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["saginesl <yana.barsukova.2003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standart"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
